// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navigation /> should render properly 1`] = `
<div>
  <div>
    Navigation: 
    Test Organization
  </div>
</div>
`;

exports[`<Navigation /> should render properly loading state 1`] = `
<div>
  <div>
    Loading...
  </div>
</div>
`;
